cmake_minimum_required (VERSION 3.9.0)
if (POLICY CMP0111)
cmake_policy(SET CMP0111 OLD)
endif ()
project (raikv)
include_directories (include)
if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
add_definitions(/DPCRE2_STATIC)
if ($<CONFIG:Release>)
add_compile_options (/arch:AVX2 /GL /std:c11 /wd5105)
else ()
add_compile_options (/arch:AVX2 /std:c11 /wd5105)
endif ()
set (kv_sources  src/key_ctx.cpp  src/ht_linear.cpp  src/ht_cuckoo.cpp    src/msg_ctx.cpp  src/ht_stats.cpp  src/ht_init.cpp  src/scratch_mem.cpp  src/util.cpp  src/rela_ts.cpp  src/radix_sort.cpp  src/print.cpp  src/ev_net.cpp  src/route_db.cpp  src/timer_queue.cpp  src/stream_buf.cpp  src/bloom.cpp  src/monitor.cpp  src/ev_tcp.cpp  src/ev_udp.cpp  src/ev_unix.cpp  src/logger.cpp        src/key_hash.c                                     src/win.c)
else ()
set (kv_sources  src/key_ctx.cpp  src/ht_linear.cpp  src/ht_cuckoo.cpp    src/msg_ctx.cpp  src/ht_stats.cpp  src/ht_init.cpp  src/scratch_mem.cpp  src/util.cpp  src/rela_ts.cpp  src/radix_sort.cpp  src/print.cpp  src/ev_net.cpp  src/route_db.cpp  src/timer_queue.cpp  src/stream_buf.cpp  src/bloom.cpp  src/monitor.cpp  src/ev_tcp.cpp  src/ev_udp.cpp  src/ev_unix.cpp  src/logger.cpp        src/key_hash.c                                    )
add_compile_options (-Wall -Wextra -Werror -pedantic -ggdb -O3 -mavx -maes -fno-omit-frame-pointer)
endif ()
add_library (raikv STATIC ${kv_sources})
if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
link_libraries (raikv ws2_32)
else ()
link_libraries (raikv -lpthread -lrt)
endif ()
add_definitions (-DKV_VER=1.14.0-87)
add_executable (kv_test test/test.cpp)
add_executable (hash_test test/hash_test.cpp)
add_executable (ping test/ping.cpp)
add_executable (kv_cli test/cli.cpp)
add_executable (mcs_test test/mcs_test.cpp)
add_executable (kv_server test/server.cpp)
add_executable (load test/load.cpp)
add_executable (ctest test/ctest.c)
add_executable (rela_test test/rela_test.cpp)
add_executable (pq_test test/pq_test.cpp)
add_executable (pubsub test/pubsub.cpp)
add_executable (zipf_test test/zipf_test.cpp)
add_executable (test_rtht test/test_rtht.cpp)
add_executable (test_cr test/test_cr.cpp)
add_executable (test_delta test/test_delta.cpp)
add_executable (test_routes test/test_routes.cpp)
add_executable (test_wild test/test_wild.cpp)
if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
if (NOT TARGET pcre2-8-static)
add_library (pcre2-8-static STATIC IMPORTED)
set_property (TARGET pcre2-8-static PROPERTY IMPORTED_LOCATION_DEBUG ../pcre2/build/Debug/pcre2-8-staticd.lib)
set_property (TARGET pcre2-8-static PROPERTY IMPORTED_LOCATION_RELEASE ../pcre2/build/Release/pcre2-8-static.lib)
target_include_directories (test_wild PUBLIC ../pcre2/build)
else ()
target_include_directories (test_wild PUBLIC ${CMAKE_BINARY_DIR}/pcre2)
endif ()
target_link_libraries (test_wild pcre2-8-static)
else ()
if (TARGET pcre2-8-static)
target_include_directories (test_wild PUBLIC ${CMAKE_BINARY_DIR}/pcre2)
target_link_libraries (test_wild pcre2-8-static)
else ()
target_link_libraries (test_wild -lpcre2-8)
endif ()
endif ()
add_executable (test_uintht test/test_uintht.cpp)
add_executable (test_bitset test/test_bitset.cpp)
add_executable (test_dlist test/test_list.cpp)
add_executable (test_bloom test/test_bloom.cpp)
add_executable (test_coll test/test_coll.cpp)
add_executable (test_min test/test_min.cpp)
add_executable (test_timer test/test_timer.cpp)
add_executable (test_tcp test/test_tcp.cpp)
add_executable (test_udp test/test_udp.cpp)
add_executable (test_log test/test_log.cpp)
